# cyber-briefing

./: .env.example  .gitignore  CLAUDE.md  HANDOFF.md  README.md  briefing.py  com.cyberbriefing.daily.laptop.plist  com.cyberbriefing.daily.laptop.plist.example  com.cyberbriefing.daily.plist  com.cyberbriefing.daily.plist.example  com.cyberbriefing.weekly.laptop.plist  com.cyberbriefing.weekly.laptop.plist.example  com.cyberbriefing.weekly.plist  com.cyberbriefing.weekly.plist.example  config.local.yaml.example  config.yaml  config_loader.py  daemon.py  healthcheck.sh  install_launchd.sh  pyproject.toml  requirements.txt  run_briefing.sh  weekly_run.py
.github/: dependabot.yml
collectors/: aikido_scraper.py  anthropic_red_scraper.py  base.py  cisa_kev.py  cloudseclist_scraper.py  enisa_scraper.py  github_advisories.py  hackerone.py  ico_scraper.py  nvd.py  rss.py  tldr_scraper.py  twis_scraper.py
db/: state.py
delivery/: backup.py  bear.py  dispatch.py  formatter.py  slack.py  slack_format.py
prioritiser/: claude_response.py  clusterer.py  dedup_prompt.txt  deduplicator.py  prompt.txt  scorer.py
tests/: test_backup.py  test_base.py  test_briefing.py  test_claude_response.py  test_config_loader.py  test_deduplicator.py  test_dispatch.py  test_formatter.py  test_host_matches.py  test_scorer.py  test_slack_client.py  test_slack_format.py  test_state.py  test_weekly_formatter.py  test_weekly_pipeline.py  test_weekly_reader.py  test_weekly_state.py  test_weekly_summariser.py
weekly/: formatter.py  prompt.txt  reader.py  summariser.py
(+5 files in other folders)
