[project]
name = "cyberbriefing"
version = "0.1.0"
description = "Daily cybersecurity intelligence briefing delivered to Bear Notes"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "feedparser>=6.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
cyberbriefing = "briefing:main"
